--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "bugs": {
     "url": "https://github.com/dword-design/is-gitpod/issues"
   },
-  "repository": "dword-design/is-gitpod.git",
+  "repository": "dword-design/is-gitpod",
   "license": "MIT",
   "author": "dword <sebastianlandw@gmail.com>",
   "contributors": [
