--- a/package.json
+++ b/package.json
@@ -2,12 +2,9 @@
   "name": "is-gitpod",
   "version": "1.0.4",
   "description": "Checks if we are in Gitpod",
-  "bugs": {
-    "url": "https://github.com/dword-design/is-gitpod/issues"
-  },
   "repository": "dword-design/is-gitpod",
   "license": "MIT",
-  "author": "dword <sebastianlandw@gmail.com>",
+  "author": "Sebastian Landwehr <info@dword-design.de>",
   "files": [
     "dist"
   ],
@@ -29,10 +26,5 @@
     "expect": "^24.9.0",
     "fs-extra": "^8.1.0",
     "with-local-tmp-dir": "^2.2.3"
-  },
-  "contributors": [
-    "Renovate Bot (http://renovatebot.com)",
-    "dword-design (http://www.dword-design.de)"
-  ],
-  "maintainers": []
+  }
 }
