--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "repository": "dword-design/is-gitpod",
   "license": "MIT",
   "author": "Sebastian Landwehr <info@dword-design.de>",
-  "files": [
-    "dist"
-  ],
   "main": "dist/index.js",
   "bin": {
     "is-gitpod": "./dist/cli.js"
   },
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "prepublishOnly": "base build",
-    "start": "base start",
+    "depgraph": "base depgraph",
+    "prepare": "base prepare",
+    "prepublishOnly": "base prepublishOnly",
     "test": "base test"
   },
   "dependencies": {
