--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "is-gitpod",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "Checks if we are in Gitpod",
   "repository": "dword-design/is-gitpod",
   "license": "MIT",
@@ -13,13 +13,15 @@
     "dist"
   ],
   "scripts": {
+    "commit": "base commit",
     "depgraph": "base depgraph",
     "prepare": "base prepare",
     "prepublishOnly": "base prepublishOnly",
+    "release": "base release",
     "test": "base test"
   },
   "dependencies": {
-    "child-process-promise": "^2.2.1"
+    "execa": "^4.0.0"
   },
   "devDependencies": {
     "@dword-design/base": "^6.0.0",
