--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "test": "base test"
   },
   "dependencies": {
-    "execa": "^4.0.0"
+    "which": "^2.0.2"
   },
   "devDependencies": {
     "@dword-design/base": "^6.0.0",
     "@dword-design/functions": "^2.2.2",
+    "execa": "^4.0.0",
     "fs-extra": "^8.1.0",
     "with-local-tmp-dir": "^2.2.3"
   }
