--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dist"
   ],
   "scripts": {
-    "clean": "base clean",
+    "check-unknown-files": "base check-unknown-files",
     "commit": "base commit",
     "dev": "base dev",
     "lint": "base lint",
@@ -25,7 +25,7 @@
     "which": "^2.0.2"
   },
   "devDependencies": {
-    "@dword-design/base": "^6.0.0",
+    "@dword-design/base": "^7.0.0",
     "@dword-design/functions": "^2.2.2",
     "execa": "^5.0.0",
     "fs-extra": "^9.0.0",
